fix input text placeholder alignment on Safari

--- a/portal/src/styles/_header.scss
+++ b/portal/src/styles/_header.scss
@@ -59,6 +59,7 @@ header:not(.mobile-header) {
             padding-right: calc(#{$inline-space-sm} / 2);
             padding-left: calc(#{$inline-space-sm} / 2);
             background-color: $light-gray;
+            line-height: normal;
             margin-left: 5px;
             height: 30px;
             width: 225px;
